enhance example
